# english_active_recall

./: .dockerignore  .env.example  .gitignore  =2.0.0  AGENTS.md  CLAUDE.md  Makefile  README.md  backend.Dockerfile  deploy.sh  dev_run.sh  docker-compose.yml  plan.md  pyproject.toml
.claude/: ralph-loop.local.md  settings.local.json
alembic/: env.py
app/: dependencies.py  main.py
app/api/: router.py
app/api/v1/: auth.py  cards.py  export.py  generate.py  health.py  tags.py  tts.py  users.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  audio_cache.py  card.py  tag.py  user.py
app/schemas/: __init__.py  auth.py  card.py  generate.py  tag.py  tts.py  user.py
app/services/: ai_service.py  auth_service.py  card_service.py  export_service.py  tag_service.py  tts_service.py
docs/: database.md  deployment-checklist.md  project_design.md  tts-implementation.md
docs/plans/: 2026-01-15-cloud-tts-integration.md  2026-04-01-export-cards-xlsx.md  2026-04-13-drill-mode-design.md  2026-04-13-drill-mode-implementation.md  2026-04-13-mcp-service-design.md
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: EditCardDialog.tsx  FlashcardDisplay.tsx  Layout.tsx  RecommendDialog.tsx  SmartInputDialog.tsx  TagSelector.tsx
tests/: conftest.py  test_auth.py  test_cards.py  test_generate.py  test_health.py  test_tts_api.py  test_tts_integration.py  test_tts_service.py  test_users.py
tests/api/: test_export.py
tests/services/: test_export_service.py
(+8 files in other folders)
